Attempting to fix mobile alignment issues for the final field state

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -130,7 +130,7 @@ input[type=range] + datalist option:last-child {
 #endState {
 	width: 300px;
 	height: 300px;
-	margin: 15px;
+	margin: auto;
 	user-select: none; /* standard syntax */
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
